--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,11 +20,11 @@
         {% endif %}
 
         <p align="center"><a href="./index">Home</a></p>
-        <p align="center"><a href="./publications">Publications</a></p>
-        <p align="center"><a href="./projects">Projects</a></p>
-        <p align="center"><a href="./research">Research</a></p>
-        <p align="center"><a href="./events">Activities</a></p>
-        <p align="center"><a href="./teaching">Teaching</a></p>
+        <p align="center"><a href="./pages/publications">Publications</a></p>
+        <p align="center"><a href="./pages/projects">Projects</a></p>
+        <p align="center"><a href="./pages/research">Research</a></p>
+        <p align="center"><a href="./pages/events">Activities</a></p>
+        <p align="center"><a href="./pages/teaching">Teaching</a></p>
         <p align="center"><a href="https://kastle.cs.wright.edu">KASTLE Lab</a></p>
 
         <hr>
